--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -14,14 +14,34 @@
     <header>
         <!--? LOGO-->
         <img src="../img/LOGOALFA CRUDO.png" alt="seguridad e higiene">
-        <nav>
-            <ul>
-                <li> <a href="../index.html"> Home</a></li>
-                <li> <a href="../pages/servicios.html">Servicios </a></li>
-                <li> <a href="../pages/empresa.html">Empresa</a></li>
-                <li> <a href="../pages/contacto.html">Contacto</a></li>
-                <li><a href="./clientes.html">Clientes</a></li>
-            </ul>
+
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #9aad56;">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./empresa.html">Empresa</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./clientes.html">Clientes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
